<resources>
    <!--    TODO: remove this string-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="app_name">Trusties</string>

    <!--    Bottom navigation labels/ titles  -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_new_post">New Post</string>

    <string name="title_signup">Sign Up</string>
    <string name="title_login">Log In</string>
    <string name="title_verification">Verification</string>

    <!--    SignUp   -->
    <string name="image_text_view">Image:</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_verify_password">Verify Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="join_btn">Join</string>

    <!--    Login   -->
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_tv">Email</string>
    <string name="password_tv">Password</string>
    <string name="join_us">JOIN US</string>

    <!--    Verification   -->
    <string name="verification_text">Hi\nYour details have been saved in the system successfully.\n\nA verification code sending to your email account -</string>
    <string name="hint_verification_fullname">User name</string>
    <string name="hint_verification_email">User Email</string>
    <string name="hint_verification_code">Enter your verification code</string>
    <string name="verification_check_btn">CHECK</string>
    <string name="verification_resend">Did not receive an email?\n To resend</string>
    <string name="click_here">Click here</string>
    <string name="login">Login...</string>

    <!--    List row   -->
    <string name="hint_post_text">Lorem ipsum dolor sit amet. Quo voluptatem velit quo perferendis tempora est iste fugit! At sunt doloribus id exercitationem quia sit esse deserunt qui odit quos vel modi delectus?</string>
    <string name="hint_date">01/01/2022  00:00</string>

    <!--    Add new post   -->
    <string name="hint_post_title">Title:</string>
    <string name="hint_post_description">Description:</string>
    <string name="tags_text_view">Tags:</string>
    <string name="post_btn">POST</string>
    <string name="circle_text_view">Friends circle:</string>
    <string name="location_text_view">Location:</string>
    <string name="sos_btn">SOS CALL</string>
    <string name="forgot_password">Forgot password?</string>

    <!--    Post details  -->
    <string name="edit_text_view">EDIT</string>
    <string name="delete_text_view">DELETE</string>
    <string name="hint_post_status">STATUS</string>
    <string name="hint_post_role">ROLE</string>
    <string name="hint_author_name">author name</string>

    <string name="close_btn">close</string>
    <string name="complete_the_following_details">Complete the following details</string>
    <string name="search">Search</string>
    <string name="hello">Hello</string>
    <string name="first_circle">First Circle:</string>
    <string name="second_circle">Second Circle:</string>
    <string name="third_circle">Third Circle:</string>


</resources>