<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/addPostFragment"
        android:icon="@drawable/add_icon"
        android:title="@string/title_new_post" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/friendsCircleFragment"
        android:icon="@drawable/friends_icon"
        android:title="Friends" />

</menu>