<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_navigation"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.trusties.login.SignUpFragment"
        android:label="@string/title_signup"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_verificationFragment"
            app:destination="@id/verificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/logInFragment"
        android:name="com.example.trusties.login.LogInFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_log_in">
        <action
            android:id="@+id/action_logInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_logInFragment_to_verificationFragment"
            app:destination="@id/verificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/verificationFragment"
        android:name="com.example.trusties.login.VerificationFragment"
        android:label="@string/title_verification"
        tools:layout="@layout/fragment_verification">
        <argument
            android:name="userName"
            app:argType="string" />
        <argument
            android:name="userEmail"
            app:argType="string" />
        <argument
            android:name="verifyCode"
            app:argType="string" />
    </fragment>

</navigation>