<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.trusties.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.trusties.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.trusties.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.trusties.login.SignUpFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_verificationFragment"
            app:destination="@id/verificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/logInFragment"
        android:name="com.example.trusties.login.LogInFragment"
        android:label="fragment_log_in"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_logInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_logInFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/verificationFragment"
        android:name="com.example.trusties.login.VerificationFragment"
        android:label="fragment_verification"
        tools:layout="@layout/fragment_verification" >
        <action
            android:id="@+id/action_verificationFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="userName"
            app:argType="string" />
        <argument android:name="userEmail" />
        <argument
            android:name="verifyCode"
            app:argType="string" />
    </fragment>

</navigation>