<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.VerificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/verification_message_tv"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/verification_text"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/verification_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_verification_fullname"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/verification_message_tv"
            app:layout_constraintEnd_toEndOf="@+id/verification_message_tv"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="@+id/verification_message_tv"
            app:layout_constraintTop_toTopOf="@+id/verification_message_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/verification_user_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_verification_email"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/verification_message_tv"
            app:layout_constraintEnd_toEndOf="@+id/verification_message_tv"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/verification_message_tv"
            app:layout_constraintTop_toTopOf="@+id/verification_message_tv"
            app:layout_constraintVertical_bias="0.967" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verification_code_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/TrustiesPrimaryColor"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verification_message_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verification_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/hint_verification_code"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHighlight="@color/TrustiesPrimaryColor"
                android:textColorLink="@color/TrustiesPrimaryColor"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="214dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/verification_check_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="120dp"
            android:backgroundTint="@color/TrustiesPrimaryColor"
            android:fontFamily="@font/inter"
            android:text="@string/verification_check_btn"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verification_code_layout" />

        <TextView
            android:id="@+id/verification_resend_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="93dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="100dp"
            android:gravity="center|start"
            android:text="@string/verification_resend"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verification_check_btn"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/verification_resend_btn"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="126dp"
            android:layout_height="34dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-27dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:ellipsize="middle"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:longClickable="true"
            android:text="@string/click_here"
            android:textColor="@color/hyperlinkColor"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="@+id/verification_resend_tv"
            app:layout_constraintTop_toBottomOf="@+id/verification_resend_tv" />

        <ProgressBar
            android:id="@+id/verification_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:indeterminateTint="@color/progressBarColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.411" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>