<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_forgotPassword_tv"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:ellipsize="middle"
            android:focusable="true"
            android:longClickable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/titleColor"
            android:textColorHighlight="@color/TrustiesPrimaryColor"
            android:textColorLink="@color/TrustiesPrimaryColor"
            android:textSize="17sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="370dp"
            android:layout_height="170dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:boxCornerRadiusBottomEnd="100dp"
            app:boxCornerRadiusBottomStart="100dp"
            app:boxCornerRadiusTopEnd="100dp"
            app:boxCornerRadiusTopStart="100dp"
            app:boxStrokeColor="@color/TrustiesPrimaryColor"
            app:errorEnabled="true"
            app:hintTextColor="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/email_tv"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingStart="9dp"
                android:textColorHighlight="@color/TrustiesPrimaryColor"
                android:textColorLink="@color/TrustiesPrimaryColor"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="214dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:boxCornerRadiusBottomEnd="100dp"
            app:boxCornerRadiusBottomStart="100dp"
            app:boxCornerRadiusTopEnd="100dp"
            app:boxCornerRadiusTopStart="100dp"
            app:boxStrokeColor="@color/TrustiesPrimaryColor"
            app:hintTextColor="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_layout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/password_tv"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingStart="9dp"
                android:textColorHighlight="@color/TrustiesPrimaryColor"
                android:textColorLink="@color/TrustiesPrimaryColor"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="318dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/TrustiesPrimaryColor"
            android:fontFamily="@font/poppins"
            android:paddingTop="7dp"
            android:text="Login"
            android:textColorHighlight="@color/TrustiesPrimaryColor"
            android:textColorLink="@color/titleColor"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <TextView
            android:id="@+id/login_joinbtn_tv"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="100dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:ellipsize="middle"
            android:focusable="true"
            android:longClickable="true"
            android:text="@string/join_us"
            android:textColor="@color/titleColor"
            android:textColorHighlight="@color/TrustiesPrimaryColor"
            android:textColorLink="@color/TrustiesPrimaryColor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv"
            app:layout_constraintVertical_bias="0.067" />

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:indeterminateTint="@color/progressBarColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.411" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>